--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
     <div class="nav-bg">
         <nav class="navegacion-principal contenedor">
-            <a href="#"> Inicio </a>
-            <a href="#"> Sobre mi </a>
+            <a href="#""> Inicio </a>
+            <a href="about.html"> Sobre mi </a>
             <a href="#"> Clientes </a>
-            <a href="#"> Contacto </a>
+            <a href="contact.html"> Contacto </a>
         </nav>
     </div>
 
